fix z-index, add multiple playlist files upload

--- a/pl-dialog.css
+++ b/pl-dialog.css
@@ -11,6 +11,7 @@
   opacity: 0;
   -webkit-transition: all 180ms ease-in;
   transition: all 180ms ease-in;
+  z-index: 3;
 }
 
 .dialog.dialog--active {
